2005-03-04    <tino@firebird.03.softkill.net>

	* hasher.h (hasher): The old hash band functions were poor, so
	reverted back to slower but mathematically correct solution using
	a polynomial: hash[n]=f[x[i]](n)=sum[i=0..len](x[i]*n^i) where
	x[i] is the data (actually, it's calculated backwards).  Hopefully
	modern processors will sometimes become able to calculate the
	mul+add in one cpu cycle.

	* file.h (tino_file_mmap_anon): added

	* ex.h (tino_verror): support of tino_verror_fn added

	* dir.h (tino_dir_read): created

	* slist.h (tino_slist_destroy, tino_glist_destroy): added

2005-02-06    <tino@firebird.03.softkill.net>

	* Makefile-tar.sh (ANNOUNCE DESCRIPTION COOPYING): make dist did
	not work any more, oops ;)

	* getopt.h (tino_getopt): -- is made ARG in certain situations

2005-01-27    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt): DD otion added
	(main): integer now active in unit_test

2005-01-26    <tino@firebird.03.softkill.net>

	* xd.h (main, xd): added
	(tino_xd): improved for better formatting

	* sock.h (tino_sock_getaddr, tino_sock_tcp_listen): added from
	accept.c/socklinger.c

	* setproctitle.h (tino_setproctitle): superfluous variable removed.

	* str.h (tino_str_vprintf): better FATAL text

	* getopt.h (main): debug output corrected

	* Makefile.tino.dist (ADD_CFLAGS): warning added.

	* Makefile-test.sh (CFLAGS): -I- added, as this is needed for unit
	tests.  Note that you *must* include tino/NAME.h and *must*not*
	use -Itino, as this interferes with includes of the standard
	system headers (some names are redefined, -Itino then grabs the
	wrong include for <...> includes).  Also please be very carful in
	case you have -I., as this may break similar ways.  So if you use
	-I, be sure to use -I- appropriately.
	
2005-01-25    <tino@firebird.03.softkill.net>

	* Makefile-test.sh (genit): TINO_FILE_EXCEPTION added to allow
	"make test" to work again.

	* exception.h (tino_throw_str): corrected, and other changes to